# long_form_tts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
app/: .gitignore  Makefile  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
app/electron/: main.ts  ollama.ts  paths.ts  pipeline.ts  preload.ts  queue.ts  setup.ts
app/scripts/: release.sh
app/src/: App.tsx  env.d.ts  index.css
app/src/components/: ConfigPanel.tsx  QueuePanel.tsx  SetupWizard.tsx
app/src/hooks/: useQueue.ts  useSetup.ts
docs/app/: app.md
docs/architecture/: architecture.md  audiobook_pipeline.md  content_extraction.md  podcast_pipeline.md
docs/backends/: llm_models.md  pdf_backends.md  toc_analysis.md  translation.md  tts_backends.md
docs/getting_started/: getting_started.md  sample_pdfs.md
docs/reference/: api_reference.md  cli_reference.md  troubleshooting.md
notebooks/: dialogue_prompt_testing.ipynb  narration_prompt_testing.ipynb  toc_analysis.ipynb
notebooks/tts/: audiobook.ipynb  languages.ipynb  podcast.ipynb
scripts/: audiobook.py  podcast.py
scripts/configs/: audiobook.default.yaml  audiobook.example.yaml  audiobook.py  cli_arg_parser.py  common.py  loader.py  podcast.default.yaml  podcast.example.yaml  podcast.py
src/audiobook/: __init__.py  _tts_mlx.py  _tts_torch.py  adapt.py  blocks.py  config.py  preprocess.py  prompts.py  render.py
src/audiobook/prompts/: code_to_description.md  list_to_prose.md  metadata_classify.md  narration_system.md  table_to_prose.md  (+1 more)
src/podcast/: __init__.py  config.py  generate.py  prompts.py  render.py
src/shared/: __init__.py  content_extractor.py  extract.py
tests/: conftest.py
tests/blocks/: test_blocks.py  test_inline_enum.py  test_stitch.py  test_trim_overlap.py
tests/resolve_input/: test_github_rewrite.py  test_local_path.py  test_pdf_url.py  test_webpage_url.py
tests/toc/: test_classify_entry.py  test_extract_toc.py  test_get_toc.py
tests/tts/: test_load_dispatch.py  test_runtime.py
tests/web/: test_extractor.py  test_splitter.py
(+29 files in other folders)
